--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -332,7 +332,7 @@ node(TARGET_NODE) {
             writeFile file: spec_path, text: rpm_spec.body
 
             dir(repo_name) {
-                sh "git commit --allow-empty -m 'updated version to ${new_version}-${new_release}' ${spec_filename}"
+                sh "git commit --allow-empty -m 'updated version to ${new_version}-${new_release}' ${package_repo.specfile}"
                 //sh "git tag ${new_version}-${new_release}"
             }
 
