debug getting releases from web console package

--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -162,6 +162,8 @@ node(TARGET_NODE) {
 
     releases = package_repo.releases(branch_prefix)
 
+    echo "releases: ${releases}"
+    
     if (BUILD_VERSION == 'master') {
         build_version = new Version(releases[-1])
         echo "detected version: ${build_version}"
