debug branches and releases()

--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -178,6 +178,10 @@ package_repo:
             pipeline: this
         ])
 
+    def branches = package_repo.branches("enterprise-*")
+
+    echo "Branches: ${branches}"
+    
     def releases = package_repo.releases(branch_prefix)
 
     echo "releases: ${releases}"
