check branches with ssh agent

--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -183,6 +183,8 @@ package_repo:
         def releases = package_repo.releases(branch_prefix)
 
         echo "releases: ${releases}"
+
+        package_repo.clone()
     }
 
     archiveArtifacts allowEmptyArchive: true, artifacts: "BUILD/**"
