--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -210,7 +210,7 @@ node(TARGET_NODE) {
             package_repo.clone()
         }
 
-        stage("clone ${upstream_project_name}") {
+        stage("clone ${upstream_name}") {
             upstream_repo.clone()
         }
 
